[package]
name = "desim_mpmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desim_mpmc"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
desim = "0.2"

[dev-dependencies]
criterion = "0.3.5"